# library-examples

./: README.md
bar/: CMakeLists.txt  bar.cpp  bar1.cpp
custom/: CMakeLists.txt  boo.cpp
dup/: CMakeLists.txt  foo.cpp
dup/bar/: CMakeLists.txt  bar.cpp
dup/baz/: CMakeLists.txt  baz.cpp
library-symbols/: Boo.cpp  Boo.hpp  CMakeLists.txt  Foo.hpp
link-error/: Boo.cpp  CMakeLists.txt  Foo.cpp  Foo.hpp  main.cpp
link-error-fix/: CMakeLists.txt  main.cpp
link-error-fix/boo/: Boo.hpp
link-error-fix/foo/: CMakeLists.txt  Foo.hpp
link-error-odr-global/: CMakeLists.txt
link-error-odr-global-fix/: baz.cpp
link-error-odr-global-fix/boo/: CMakeLists.txt
link-error-odr-global-fix/foo/: Foo.cpp
link-error-odr-global/boo/: Boo.cpp  Boo.hpp
link-error-odr-global/foo/: CMakeLists.txt  Foo.hpp
link-error-odr-local/: main.cpp
link-error-odr-local-fix/boo/: CMakeLists.txt
link-error-odr-local-fix/foo/: CMakeLists.txt  Foo.cpp  Foo.hpp
link-error-odr-local/boo/: Boo.cpp  Boo.hpp  CMakeLists.txt
link-error/boo/: Boo.cpp  Boo.hpp  CMakeLists.txt
link-error/foo/: CMakeLists.txt  Foo.cpp
link-order-bad/: CMakeLists.txt  bar.cpp  boo.cpp  commands.txt
link-order-fix/: CMakeLists.txt  commands.txt  foo.cpp
right-way/: CMakeLists.txt  foo.cpp
surprise/: CMakeLists.txt  foo.cpp
surprise/boo/: CMakeLists.txt  boo.cpp
use_bar/: CMakeLists.txt  main.cpp  use_bar.cpp
